--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
 :root{
   background-color: #464646;
+  display: flex;
+  flex-direction: column;
+
 }
 
 @import "tailwindcss";
@@ -11,5 +14,11 @@
   --color-green: #69DF59;
   --color-lightblue: #59D2DF;
   --color-yellow: #DFDF59;
-  --color-ligthgrey: #C8C8C8;
+  --color-lightgrey: #C8C8C8;
+}
+
+.cnt-main-home{
+  display: flex;
+  flex-direction: column;
+  justify-content: baseline;
 }
