--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
   --color-yellow: #DFDF59;
   --color-lightgrey: #C8C8C8;
   --color-verydarkgrey: #222222;
+  --color-white: #ffffff;
 }
 
 /*---------------HOME------------------*/
@@ -85,4 +86,56 @@
   height: 1px;
   background-color: var(--color-lightgrey);
   margin: 0 20px;
+}
+
+/*-------------------- PREFERENCIAS ---------------------*/
+
+.ajuste-cnt{
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  row-gap: 0.5rem;
+}
+.info-ajuste-cnt{
+  display: flex;
+  flex-direction: row;
+  column-gap: 0.5rem;
+  align-items: center;
+}
+.info-ajuste-cnt label{
+  color: var(--color-white);
+  font-size: 1.2rem;
+  font-family: var(--font-sans);
+}
+.selector-pref{
+  color: var(--color-darkgrey);
+  font-size: 1.2rem; 
+  background-color: var(--color-green);
+  border-radius: 0.5rem;
+  font-family: var(--font-sans);
+  padding: 0.3rem;
+  width: 13rem;
+}
+
+.main-pref-cnt{
+  margin: 2rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 2rem;
+}
+
+.notif-cnt{
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+}
+.config-noti{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.config-noti label{
+  color: var(--color-white);
+  font-size: 1.1rem;
+  font-family: var(--font-sans);
 }
