--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,7 @@
   --color-lightgrey: #C8C8C8;
   --color-verydarkgrey: #222222;
   --color-white: #ffffff;
+  --background-disabled: #808080;
 }
 
 /*---------------HOME------------------*/
@@ -138,4 +139,174 @@
   color: var(--color-white);
   font-size: 1.1rem;
   font-family: var(--font-sans);
+}
+
+/*-----------------MASCOTA - VISTA ---------------------*/
+
+.title-mascota-cnt{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 2rem 2.3rem 1.5rem 2.3rem;
+}
+.title-mascota-cnt h2{
+  font-family: var(--font-sans);
+  color: var(--color-white);
+  font-weight: 400;
+  font-size: 1.6rem;
+}
+.btn-mascota-cnt{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  width: 5rem;
+  column-gap: 1rem;
+}
+.btn-mascota-cnt img{
+  width: 1.5rem;
+  height: auto;
+}
+
+.mascota-data-cnt{
+  display: flex;
+  flex-direction: column;
+  margin: 2rem 2.3rem 1.5rem 2.3rem;
+  row-gap: 1.2rem;
+}
+.mascota-info-agrupador{
+  display: flex;
+  flex-direction: row;
+  column-gap: 1rem;
+}
+.mascota-dato{
+  display: flex;
+  align-items: baseline;
+  flex-direction: column;
+  font-family: var(--font-sans);
+}
+.mascota-dato label{
+  color: var(--color-white);
+  font-weight: 500;
+}
+
+.datocorto{
+  background-color: var(--color-lightblue);
+  padding: 0.5rem;
+  width: 10rem;
+  border-radius: 0.7rem;
+}
+
+.datolargo{
+  background-color: var(--color-lightblue);
+  padding: 0.5rem;
+  width: 21rem;
+  border-radius: 0.7rem;
+}
+
+
+/*-----------------MASCOTA - EDICIÓN ---------------------*/
+
+.no-pet-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh; /* Asegura que cubra toda la vista */
+    background-color: #f4f4f4; /* Ejemplo de color de fondo claro */
+}
+
+.editable-input {
+    background-color: var(--background-disabled); 
+    padding: 0.4rem 0.5rem;
+    border-radius: 0.4rem;
+    color: var(--color-white); 
+}
+
+.no-pet-message-cnt {
+    text-align: center;
+    padding: 20px;
+    border-radius: 8px;
+    background-color: #ffffff;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: -60px; 
+}
+
+.no-pet-title {
+    font-size: 1.5rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+.no-pet-text {
+    margin-bottom: 20px;
+    color: #666;
+}
+
+.btn-cargar-mascota {
+   
+    background-color: var(--color-lightblue); 
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+/* Estilo para botones*/
+.btn-guardar-mascota {
+  display: flex; 
+  width: 10rem;
+  align-content: center;
+  justify-content: center;
+  margin-top: 2rem;
+  padding: 0.5rem;
+  background-color: var(--color-lightblue);
+  color: black;
+  border-radius: 8px;
+  font-weight: normal;
+  font-size: 1rem;
+  cursor: pointer;
+} 
+
+.btn-cancelar-mascota {
+  display: flex; 
+  align-content: center;
+  justify-content: center;
+  width: 10rem;
+  margin-top: 0.2rem;
+  padding: 0.5rem;
+  background-color: var(--color-yellow);
+  color: black;
+  border-radius: 8px;
+  font-weight: normal;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.btn-actions-group{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 0.6rem;
+}
+
+/* Estilos para los campos de formulario en modo edición */
+.datolargo, .datocorto {
+  padding: 0.4rem 0.5rem;
+  border-radius: 0.4rem;
+  font-size: 1rem;
+}
+
+/* P Q LOS select  tengan la misma apariencia que los input */
+.mascota-dato select.datocorto, .mascota-dato select.datolargo {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    background-repeat: no-repeat;
+    background-position: right 0.5rem center;
+    background-size: 0.7rem;
+    padding-right: 2rem; 
+    border: none;
 }
